@@ -3,10 +3,12 @@ OpenLDAP 2.3 Change Log
 OpenLDAP 2.3.20 Engineering
 	Added libldap SASL workaround for broken LDAP servers (ITS#4391)
 	Fixed slapd config_generic_wrapper missing parameter bug (ITS#4376)
+	Fixed slapd extensible filter value normalization bug (ITS#4380)
 	Fixed slapd non-read/write epoll event handling (ITS#4395)
 	Fixed slapd-bdb/hdb wake listener on runqueue submit (ITS#4385)
 	Fixed slapo-auditlog crash (ITS#4394)
 	Fixed slapo-accesslog unbind crash (ITS#4386)
+	Fixed slapo-syncprov update latency issue (ITS#4385)
 	Fixed slurpd reject error formating (ITS#4382)
 	Build Environment
 		Fixed <netinet/tcp.h> detection on AIX (ITS#4312)
